# bs-voucher-link-generator-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
